# policyIDs

./: .gitignore  CosmosAI
clock6/: CHANGELOG.md  clock6.cabal
clock6/app/: Main.hs
clock6/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
clock6/dist-newstyle/packagedb/ghc-8.10.7/: clock6-0.1.0.0-inplace.conf  package.cache
