cabal-version:      2.4
name:               clock6
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
author: Fabian Ljubanovic

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: fabian.ljubanovic@gmail.com

-- A copyright notice.
-- copyright:
-- category: App
extra-source-files: CHANGELOG.md

library
    exposed-modules:

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable clock6
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        ansi-terminal,
        directory,
        ghc,
        mtl,
        random,
        time ^>=1.9.3,
        transformers,
        clock6

    hs-source-dirs:   app
    default-language: Haskell2010
